Add page for Daily Duty Report
The user is now able to click a link on
the navigation bar and be taken to a page
on the web application that hosts the
Daily Duty Report embedded Excel spreadsheet

--- a/index.html
+++ b/index.html
@@ -15,14 +15,12 @@
 </head>
 <body>
   <nav>
-    <a>Fire Station Hub</a>
-    <a>Daily Duty Report</a>
+    <a href="index.html">Fire Station Hub</a>
+    <a href="duty.html">Daily Duty Report</a>
   </nav>
   <main>
     <section class="search">
-      <header>
-        Fire Station Hub
-      </header>
+      <header>Fire Station Hub</header>
       <label for="query"></label>
       <input
             autocapitalize="off"
