Test the remote deployment

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <main>
     <section class="search">
       <header>Fire Station Hub</header>
+      <header>USC > UCLA</header>
       <label for="query"></label>
       <input
             autocapitalize="off"
